# macha

./: Cargo.toml  Dockerfile  HOW_IT_WORKS.md  docker-compose.yml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
examples/: embedded_demo.rs
src/: error.rs  lib.rs  proto.rs
web/: dashboard.html  docs.html  index.html
